--- a/3.CSS/BOOTSTRAP/index.html
+++ b/3.CSS/BOOTSTRAP/index.html
@@ -246,19 +246,26 @@
 					  </p>
 						</div>
 					</div>
-					
-					<div class="contactContainer" id="contactme">
-						<div align="center">
-						<a class="action-contact shadow blue" style="width: 30%;">Message me</a>
-						</div>
-					  		<form action="/action_page.php">
-							    <label for="fname" style="padding: 10px; font-size: 20px;">Subject</label>
-							    <input type="text" id="fname" name="firstname">
-							    <label for="subject" style="font-size: 20px;">Message</label>
-					    		<textarea id="subject" name="subject" placeholder="Write something.." style="height:150px;margin-bottom:0px;"></textarea>
-					    		<input type="submit" value="Send">
-					  		</form>
-					</div>
+
+							<div class="container contact_board" align="center" style="margin-top: 20px;">
+									<div class="col-sm-6" style="position: relative; padding-top: auto; width: 50%; height: 482px;">
+										 <img src="img/myAvatar.png" alt="" style="width: auto;"> 			
+									</div>
+											<div class="col-sm-6" style="position: relative; padding-top: 50px;">
+												<div align="center">
+														<a class="action-contact shadow blue" style="width: 50%;">Message me</a>
+												</div>
+										  		<form action="/action_page.php">
+												    <label for="fname" style="padding: 10px; font-size: 20px;">Subject</label>
+												    <input type="text" id="fname" name="firstname">
+												    <label for="subject" style="font-size: 20px;">Message</label>
+										    		<textarea id="subject" name="subject" placeholder="Write something.." style="height:150px;margin-bottom:0px;"></textarea>
+										    		<input type="submit" value="Send">
+										  		</form>
+												</div>
+											</div>
+									</div>
+							</div>
 				</div>
 
 				<div class="follow" align="center" style="position: relative;">
@@ -272,8 +279,8 @@
 					<div class="container-footer">	
 					</div>
 					 	<!-- Copyright -->
-					  <div class="footer-copyright text-center py-3"><b>© 2020 Copyright:</b>
-					    <a href="https://mdbootstrap.com/education/bootstrap/" style="color: white;"> zynagraphy.com</a>
+					  <div class="footer-copyright text-center py-3" style="color: white;"><b>© 2020 Copyright:</b>
+					    <a href="https://mdbootstrap.com/education/bootstrap/" style="color: white;"> Zybil Photography</a>
 					  </div>
 					 	<!-- Copyright -->			
 				</footer>
