--- a/3.CSS/BOOTSTRAP/index.html
+++ b/3.CSS/BOOTSTRAP/index.html
@@ -19,9 +19,17 @@
 						<div class="container carousel_container">	
 							<nav class="navbar navbar-light"> 
 								<div class="container-fluid">
+									<div class="navbar-header">
+		      								<button type="button" style="color: black;" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+		        								<span class="icon-bar"></span>
+		        								<span class="icon-bar"></span>
+		        								<span class="icon-bar"></span>                        
+		      								</button>
+		      								<a class="action-button shadow" href="#" id="zynagraphy”">Zynagraphy</a>
+		    						</div>
+
 									<!-- Nav Bar -->
-								    <div class="navbar-header">
-											<a class="action-button shadow" href="#" style="margin-right: 80px;">Zynagraphy</a>
+								    <div class="collapse navbar-collapse" style="width: 100%;" id="myNavbar">
 									    	<a href="#about" class="btn btn-white btn-animation-1">About Me</a>
 									    	<a href="#adventuregallery" class="btn btn-white btn-animation-1">Adventure</a> 
 									    	<a href="#foodgallery" class="btn btn-white btn-animation-1">Food</a> 
@@ -88,8 +96,8 @@
 						</div>
 
 						<div>
-							<div class="row" style="padding: 0px;">
-							    <div class="col-sm-1" style=""><img src="img/pig_emoticon.png" alt="profile"></div>
+							<div class="row" style="padding: 0px; width: 100%;">
+							    <div class="col-sm-1" style=""><img src="img/pig_emoticon.png" alt="profile" class="emoticonpig"></div>
 							    <div class="col-sm-1" style=""><img src="img/pig_emoticon.png" alt="profile"></div>
 							    <div class="col-sm-1" style=""><img src="img/pig_emoticon.png" alt="profile"></div>
 							    <div class="col-sm-1" style=""><img src="img/pig_emoticon.png" alt="profile"></div>
@@ -247,9 +255,9 @@
 						</div>
 					</div>
 
-							<div class="container contact_board" align="center" style="margin-top: 20px;">
-									<div class="col-sm-6" style="position: relative; padding-top: auto; width: 50%; height: 482px;">
-										 <img src="img/myAvatar.png" alt="" style="width: auto;"> 			
+							<div class="container contact_board" style="margin-top: 20px;" id="contactme">
+									<div class="col-sm-6" style="position: relative; padding-top: auto; height: 482px;">
+										 <img src="img/myAvatar.png" alt="" style="width: 100%; display: inline-block; position: absolute;" align="center">
 									</div>
 											<div class="col-sm-6" style="position: relative; padding-top: 50px;">
 												<div align="center">
