--- a/3.CSS/BOOTSTRAP/index.html
+++ b/3.CSS/BOOTSTRAP/index.html
@@ -76,19 +76,19 @@
 						</div>
 
 						<!-- Jumbotron -->
-						<div class="jumbotron" align="center" id="about" style="padding: 10px;">
-							<div class="container jumbotron_board" align="center" style="margin: auto;">
-									<div class="col-sm-6" style="position: relative; padding-top: 50px;">
+						<div class="jumbotron" align="center" id="about">
+							<div class="container jumbotron_board" align="center">
+									<div class="col-sm-7" style="position: relative; padding-top: 10px;">
 										  			<h1 class="display-3" style="margin-top: 1%;"></h1>
-													<p class="lead" style="font-size: 20px;"><b>I’m Zybil Natad and my friends call me “Zy”. Fair in complexion and of average height as you can see in the picture. I am 25 years old(November 5, 1994), I live and born at Philippines, a pure Cebu ana and a Catholic I’m proud to say.</b></p>
+													<p class="lead" style="font-size: 25px;"><b>I’m Zybil Natad and my friends call me “Zy”. Fair in complexion and of average height as you can see in the picture. I am 25 years old(November 5, 1994), I live and born at Philippines, a pure Cebu ana and a Catholic I’m proud to say.</b></p>
 												<hr class="m-y-md">
-													<p class="para" style="font-size: 15px;">I graduated Bachelor of Science in Computer Engineering at a prestigious and well respected university here in Cebu, University of Cebu Lapu-Lapu Mandaue. I took up the course for the reason that I am very fond of Computers and 5 years of hardwork did paid off, last 2016 I officially grabbed the certificate of document “ diploma” without failing grades and gained a lot of knowledge . I am now a professional naming, Engr. Zybil A. Natad. Looking into it and comprehending, proudly saying, “This is the end in a chapter of my book, and the beginning of another”. </p>
+													<p class="para" style="font-size: 20px;">I graduated Bachelor of Science in Computer Engineering at a prestigious and well respected university here in Cebu, University of Cebu Lapu-Lapu Mandaue. I took up the course for the reason that I am very fond of Computers and 5 years of hardwork did paid off, last 2016 I officially grabbed the certificate of document “ diploma” without failing grades and gained a lot of knowledge . I am now a professional naming, Engr. Zybil A. Natad. Looking into it and comprehending, proudly saying, “This is the end in a chapter of my book, and the beginning of another”. </p>
 									</div>
 									
-										<div class="col-sm-6">
+										<div class="col-sm-5">
 											<div class="container profile-gallery" align="center">
-												<div class="profile" align="center">
-													<img src="img/image_1.jpg" alt="profile">
+												<div class="profile profpic" align="center">
+													<img src="img/image_1.jpg" alt="profile" style="width: 100%;">
 												</div>
 											</div>
 										</div>
